--- a/WebContent/AvPlan.html
+++ b/WebContent/AvPlan.html
@@ -2,7 +2,8 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<title>Available Plans</title>
+<link href="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/myAv.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 <!-- jQuery library -->
@@ -29,15 +30,143 @@
     </ul>
   </div>
 </nav> 
+<div class="main">
+		<div class="card">
+    		<div class="container" >
+    		    		<div class="table-responsive">
+           <table class="table">
+           <colgroup>
+    <col style="width: 33%" />
+    <col style="width: 33%" />
+    <col style="width: 33%" />
+  </colgroup>
+   			<thead>
+   			<tr>
+   			<td><img src="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/amount.png"></td>
+   			<td><img src="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/plan.png"></td>
+   			<td><img src="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/date.png"></td>
+   			</thead>
+   			<tbody>
+   			<tr>
+   			<td>Rs. 199</td>
+   			<td>1.4 GB data/day Unlimited Calls(Local+STD+National Roaming) and 100 Local+STD SMS/day</td>
+   			<td>28 days</td>
+   			</tr>
+   			<tr>
+   			<td></td>
+   			<td>Talktime: NA</td>
+   			<td><button class="button button1" style="background-color: red">Buy</button></td>
+   			</tr>
+   			</tbody>
+          </table>
+           </div>
+</div>
+</div>
+<div class="card">
+    		<div class="container" >
+    		    		<div class="table-responsive">
+           <table class="table">
+           <colgroup>
+    <col style="width: 33%" />
+    <col style="width: 33%" />
+    <col style="width: 33%" />
+  </colgroup>
+   			<thead>
+   			<tr>
+   			<td><img src="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/amount.png"></td>
+   			<td><img src="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/plan.png"></td>
+   			<td><img src="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/date.png"></td>
+   			</thead>
+   			<tbody>
+   			<tr>
+   			<td>Rs. 14</td>
+   			<td>Roaming Outgoing@ Rs.0.01/sec</td>
+   			<td>90 days</td>
+   			</tr>
+   			<tr>
+   			<td></td>
+   			<td>Talktime: NA</td>
+   			<td><button class="button button1" style="background-color: red">Buy</button></td>
+   			</tr>
+   			</tbody>
+          </table>
+           </div>
+</div>
+</div>
+<div class="card">
+    		<div class="container" >
+    		    		<div class="table-responsive">
+           <table class="table">
+           <colgroup>
+    <col style="width: 33%" />
+    <col style="width: 33%" />
+    <col style="width: 33%" />
+  </colgroup>
+   			<thead>
+   			<tr>
+   			<td><img src="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/amount.png"></td>
+   			<td><img src="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/plan.png"></td>
+   			<td><img src="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/date.png"></td>
+   			</thead>
+   			<tbody>
+   			<tr>
+   			<td>Rs. 59</td>
+   			<td>3G data: 500MB, local,std & Roaming Calls: unlimited.All SMS(100 sms/day):700sms.</td>
+   			<td>7 days</td>
+   			</tr>
+   			<tr>
+   			<td></td>
+   			<td>Talktime: NA</td>
+   			<td><button class="button button1" style="background-color: red">Buy</button></td>
+   			</tr>
+   			</tbody>
+          </table>
+           </div>
+</div>
+</div>
+<div class="card">
+    		<div class="container" >
+    		    		<div class="table-responsive">
+           <table class="table">
+           <colgroup>
+    <col style="width: 33%" />
+    <col style="width: 33%" />
+    <col style="width: 33%" />
+  </colgroup>
+   			<thead>
+   			<tr>
+   			<td><img src="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/amount.png"></td>
+   			<td><img src="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/plan.png"></td>
+   			<td><img src="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/date.png"></td>
+   			</thead>
+   			<tbody>
+   			<tr>
+   			<td>Rs. 99</td>
+   			<td>Unlimited Local, STD,Roaming calls along with 100SMS/day and 2GB Data</td>
+   			<td>28 days</td>
+   			</tr>
+   			<tr>
+   			<td></td>
+   			<td>Talktime: NA</td>
+   			<td><button class="button button1" style="background-color: red">Buy</button></td>
+   			</tr>
+   			</tbody>
+          </table>
+           </div>
+</div>
+</div>
+
+</div>
+
 <script>
 document.getElementById("aP").onclick = function () {
-    location.href = "file:///C:/Users/hus8kor/Documents/MobileOperator/WebContent/AvPlan.html";
+    location.href = "file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/AvPlan.html";
 };
 document.getElementById("pD").onclick=function(){
-location.href="file:///C:/Users/hus8kor/Documents/MobileOperator/WebContent/plandisplay.html";
+location.href="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/plandisplay.html";
 };
 document.getElementById("cP").onclick=function(){
-	location.href="file:///C:/Users/hus8kor/Documents/MobileOperator/WebContent/CPlan.html";
+	location.href="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/CPlan.html";
 	};
 </script>
 </body>
