--- a/WebContent/plandisplay.html
+++ b/WebContent/plandisplay.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="ISO-8859-1">
-<title>Insert title here</title>
+<meta charset="UTF-8">
+<title>Your Plan</title>
+<link href="C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/myPlan.css" rel="stylesheet" type="text/css">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 
 <!-- jQuery library -->
@@ -10,7 +11,7 @@
 
 <!-- Latest compiled JavaScript -->
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<link rel="stylesheet" href="C:/Users/hus8kor/Documents/MobileOperator/WebContent/myPlan.css">
+
 </head>
 <body>
  <nav class="navbar navbar-inverse fixed-top">
@@ -32,18 +33,48 @@
 <div class="main">
 		<div class="card">
     		<div class="container">
+    		<h3><b>YOUR CURRENT TARIFF PLAN</b></h3>
+    		<div class="table-responsive">
+           <table class="table">
+           <colgroup>
+    <col style="width: 33%" />
+    <col style="width: 33%" />
+    <col style="width: 33%" />
+  </colgroup>
+   			<thead>
+   			<tr>
+   			<td><img src="C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/amount.png"></td>
+   			<td><img src="C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/plan.png"></td>
+   			<td><img src="C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/resources/date.png"></td>
+   			</thead>
+   			<tbody>
+   			<tr>
+   			<td>Rs. 199</td>
+   			<td>1.4 GB data/day Unlimited Calls(Local+STD+National Roaming) and 100 Local+STD SMS/day</td>
+   			<td>17/09/2018</td>
+   			</tr>
+   			</tbody>
+          </table>
+           </div>
+           <div class="container-fluid">
+           <div class="row btnDiv">
+           <div class="col-sm-4"><button class="button button1" style="background-color: red;width:250px">Deactivate</button></div>
+           <div class="col-sm-4"><button class="button button1" style="background-color: black;width:250px">Edit Plan</button></div>
+           <div class="col-sm-4"><button class="button button1" style="background-color: red;width:250px">Claim for Next time period</button></div>
+    		</div>
+    		</div>
     		</div>
     		</div>
     		</div>
 <script>
 document.getElementById("aP").onclick = function () {
-    location.href = "file:///C:/Users/hus8kor/Documents/MobileOperator/WebContent/AvPlan.html";
+    location.href = "file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/AvPlan.html";
 };
 document.getElementById("pD").onclick=function(){
-location.href="file:///C:/Users/hus8kor/Documents/MobileOperator/WebContent/plandisplay.html";
+location.href="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/plandisplay.html";
 };
 document.getElementById("cP").onclick=function(){
-	location.href="file:///C:/Users/hus8kor/Documents/MobileOperator/WebContent/CPlan.html";
+	location.href="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/CPlan.html";
 	};
 </script>
 </body>
