--- a/WebContent/start.html
+++ b/WebContent/start.html
@@ -2,9 +2,112 @@
 <html>
 <head>
 <meta charset="ISO-8859-1">
-<title>Mobile Operator</title>
+<title>Insert title here</title>
+<link href="C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/myCSS.css" rel="stylesheet" type="text/css">
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<style>
+.btn {
+    background-color: #3B5998; /* Blue background */
+    border: none; /* Remove borders */
+    color: white; /* White text */
+    padding: 12px 16px; /* Some padding */
+    font-size: 16px; /* Set a font size */
+    cursor: pointer; /* Mouse pointer on hover */
+}
+
+.btnG{
+	background-color: #dd4b39;
+        padding-right: 25px;
+}
+/* Darker background on mouse-over */
+.btn:hover {
+    background-color: #3B5998;
+}
+.fa-facebook{
+	background:white;
+	color: #3b5998;
+	padding: 5px;
+        margin-right: 10px;
+       
+}
+.fa-google{
+ background: white;
+ color: #dd4b39;
+ padding: 5px;
+ margin-right: 20px;
+ }
+</style>
+<script>
+function validateForm() {
+ var x= document.forms["myForm"]["mobile"].value;
+ if(x.length !=10){
+alert("Invalid Mobile Number");
+return false;
+}
+}
+</script>
 </head>
-<body background="C:/Users/hus8kor/Documents/MobileOperator/WebContent/resources/background1.jpg">
-<h1>Swift</h1>
+<body>
+    <div class="main">
+<div class="card">
+    <div class="container">
+    <form class="form-horizontal" name="myForm" action="file:///C:/Users/hus8kor/Documents/Mobile-Operator/WebContent/otp.html" onsubmit="return validateForm()" method="post">
+    <div class="form-group">
+    
+      <div class="row">
+            <div class="col-sm-2  text-right " style="padding-top:15px;padding-right:-20px"><p><b>Login in with:</b></p></div>
+           <div class="col-sm-2">
+      <button class="btn btn-default"><i class="fa fa-facebook"></i> Facebook</button></div>
+      <div class="col-sm-2"><button class="btn btn-default btnG"><i class="fa fa-google"></i>Google</button></div>
+       <div class="col-sm-2"></div>
+</div>
+</div>
+    </div>
+<div style="margin: 30px;font-size:30px"><div class="row">
+<div class="col-sm-2"></div>
+            <div class="col-sm-2"><p><b>OR</b></p></div>
+           </div>
+</div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="email">Email:</label>
+    <div class="col-sm-10">
+      <div class="input-group">
+    <span class="input-group-addon"><i class="glyphicon glyphicon-user"></i></span>
+    <input id="email" type="email" class="form-control" name="email" placeholder="Email" required>
+  </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <label class="control-label col-sm-2" for="mob">Mobile Number:</label>
+    <div class="col-sm-10">
+      <div class="input-group">
+    <span class="input-group-addon"><i class="glyphicon glyphicon-earphone"></i></span>
+    <input id="mob" type="number" class="form-control" name="mobile" placeholder="Mobile Number" required>
+  </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <div class="checkbox">
+        <label><input type="checkbox"> Remember me</label>
+      </div>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class="col-sm-offset-2 col-sm-10">
+      <button type="submit" class="btn btn-default">Submit</button>
+    </div>
+  </div>
+</form> 
+</div>
+</div>
+</div>
+
 </body>
 </html>
